@@ -8,6 +8,8 @@ Change in the syntax of the LatestAgeMortalityPattern column in vwBaseYear datas
 
 Argument pasfr.ignore.phase2 added to pop.predict.subnat.
 
+Additional steps for very young and very old child-bearing ages in kantorova.pasfr function.
+
 10.0-0/1 (08/09/2023)
 ------
 Making default datasets from wpp2022 work with pop.predict.
